--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<title>Git Hub Web</title>
+<title>cs 161</title>
 <body>
 
-<h1>My GitHub Web</h1>
+<h1>cs 161</h1>
 <p>Erik Kersenbrock Student Web</p>
 
 </body>
