--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <h1>cs 161</h1>
 <p>Erik Kersenbrock Student Web</p>
+<a href="https://docs.google.com/document/d/1_GPnDNAlmMIIMADl_7YXyCEUNNyoTTDVMS7m2Z8Kk4c/edit?usp=sharing">chapter 1</a>
 
 </body>
 </html>
