--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>cs 161</title>
+<title> Computer Science 161</title>
 <body>
 
-<h1>cs 161</h1>
+<h1>Computer Science 161</h1>
 <p>Erik Kersenbrock Student Web</p>
-<a href="https://docs.google.com/document/d/1_GPnDNAlmMIIMADl_7YXyCEUNNyoTTDVMS7m2Z8Kk4c/edit?usp=sharing">chapter 1</a>
+<a href = "https://docs.google.com/document/d/1_GPnDNAlmMIIMADl_7YXyCEUNNyoTTDVMS7m2Z8Kk4c/edit?usp=sharing">Chapter 1</a>
+<a href = "https://docs.google.com/document/d/1UkJXZFW9f-xAoaTlIDJpwwV7cFHTG3F5NkO5IrN8DDs/edit?usp=sharing">Chapter 2</a>
+<a href = "https://docs.google.com/document/d/1e7GITpaGx_3Msj699RkaMoy_kdhsNtz3mBMHWjhQeys/edit?usp=sharing">Chapter 3</a>
 
 </body>
 </html>
