--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <a href = "https://docs.google.com/document/d/1_GPnDNAlmMIIMADl_7YXyCEUNNyoTTDVMS7m2Z8Kk4c/edit?usp=sharing">Chapter 1</a>
 <a href = "https://docs.google.com/document/d/1UkJXZFW9f-xAoaTlIDJpwwV7cFHTG3F5NkO5IrN8DDs/edit?usp=sharing">Chapter 2</a>
 <a href = "https://docs.google.com/document/d/1e7GITpaGx_3Msj699RkaMoy_kdhsNtz3mBMHWjhQeys/edit?usp=sharing">Chapter 3</a>
+<a href = "https://docs.google.com/document/d/14ir4ekVs8Lx2aC_5u0bicx7-R3PaWqRvtlNl9ZwBil0/edit?usp=sharing">Chapter 4</a>
+<a href = "https://docs.google.com/document/d/1bUvxcgw8W8G3HJNkGkTl7SCZFuL08aKPe6l0-KfS6VU/edit?usp=sharing">Chapter 5</a>
 
 </body>
 </html>
