--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <a href = "https://docs.google.com/document/d/1e7GITpaGx_3Msj699RkaMoy_kdhsNtz3mBMHWjhQeys/edit?usp=sharing">Chapter 3</a>
 <a href = "https://docs.google.com/document/d/14ir4ekVs8Lx2aC_5u0bicx7-R3PaWqRvtlNl9ZwBil0/edit?usp=sharing">Chapter 4</a>
 <a href = "https://docs.google.com/document/d/1bUvxcgw8W8G3HJNkGkTl7SCZFuL08aKPe6l0-KfS6VU/edit?usp=sharing">Chapter 5</a>
+<a href = "https://docs.google.com/document/d/1uDOJqVUvjd0yRw_4Zn1D6QWj-2DFz_xUsS9-lzTdpPo/edit?usp=sharing">Chapter 5</a>
 
 </body>
 </html>
