--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href = "https://docs.google.com/document/d/1bUvxcgw8W8G3HJNkGkTl7SCZFuL08aKPe6l0-KfS6VU/edit?usp=sharing" >Chapter 5</a>
 <a href = "https://docs.google.com/document/d/1uDOJqVUvjd0yRw_4Zn1D6QWj-2DFz_xUsS9-lzTdpPo/edit?usp=sharing" >Chapter 6</a>
 <a href = "https://docs.google.com/document/d/1TyJNy_kM4VFoFJao2lPoKqPXJJVyMKzKXr80Ura15aY/edit?usp=sharing" >Chapter 7</a>
+<a href = "https://docs.google.com/document/d/15Pvl5KIUP9UDXJY9yw3_T-SVqLtpClykabnRB9OXTQM/edit?usp=sharing" >Chapter 8</a>
 
 </body>
 </html>
