--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <a href = "https://docs.google.com/document/d/1UkJXZFW9f-xAoaTlIDJpwwV7cFHTG3F5NkO5IrN8DDs/edit?usp=sharing" >Chapter 2</a>
 <a href = "https://docs.google.com/document/d/1e7GITpaGx_3Msj699RkaMoy_kdhsNtz3mBMHWjhQeys/edit?usp=sharing" >Chapter 3</a>
 <a href = "https://docs.google.com/document/d/14ir4ekVs8Lx2aC_5u0bicx7-R3PaWqRvtlNl9ZwBil0/edit?usp=sharing" >Chapter 4</a>
-<a href = "https://docs.google.com/document/d/1bUvxcgw8W8G3HJNkGkTl7SCZFuL08aKPe6l0-KfS6VU/edit?usp=sharing" >Chapter 5</a>
 <a href = "https://docs.google.com/document/d/1uDOJqVUvjd0yRw_4Zn1D6QWj-2DFz_xUsS9-lzTdpPo/edit?usp=sharing" >Chapter 6</a>
 <a href = "https://docs.google.com/document/d/1TyJNy_kM4VFoFJao2lPoKqPXJJVyMKzKXr80Ura15aY/edit?usp=sharing" >Chapter 7</a>
 <a href = "https://docs.google.com/document/d/15Pvl5KIUP9UDXJY9yw3_T-SVqLtpClykabnRB9OXTQM/edit?usp=sharing" >Chapter 8</a>
 <a href = "https://docs.google.com/document/d/1RfKij1ubYQqNDEZuSRFQPXEN5EGJQ6RL_plQGzdYEYo/edit?usp=sharing" >Chapter 9</a>
 
+<h1>Computer Science 162</h1>
+<a href = "https://docs.google.com/document/d/1bUvxcgw8W8G3HJNkGkTl7SCZFuL08aKPe6l0-KfS6VU/edit?usp=sharing" >Chapter 5</a>
 
 </body>
 </html>
