--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <a href = "https://docs.google.com/document/d/1TPXMgqOj8Ejg7f3aJM0aroZ_f2DYTuiAeQCP9_S9M2E/edit?usp=sharing" >Chapter 10</a>
 <a href = "https://docs.google.com/document/d/1rqWeEgBV5X6eT5X-XbqWHUe5kTHkJbpZ23yd8TP09Eg/edit?usp=sharing" >Chapter 11</a>
 <a href = "https://docs.google.com/document/d/1W_VzXozhV453S6wgdj5w6pKYlJNNOxp3_InEUV4EZI8/edit?usp=sharing" >Chapter 12</a>
+<a href = "https://docs.google.com/document/d/1ieJgPvHp5KVMrVY84A94MfejGHRh_e-YQOu4L87itxA/edit?usp=sharing" >Chapter 14</a>
 
 </body>
 </html>
